<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Meteo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_as_list">Liste Villes</string>
    <string name="action_new">Ajouter Ville</string>
    <string name="activity_new_message">Hello! Dont piss me</string>
	<string name="search_hint">Hint</string>
	<string name="action_search">Recherche</string>
	<string name="action_refresh">Actualiser</string>
	<string name="login">Login</string>
	<string name="password">Password</string>
	<string name="buttonEN">Sign In</string>
    <string name="action_location">Localisation</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home</item>
        <item >Find People</item>
        <item >Photos</item>
        <item >Communities</item>
        <item >Pages</item>
        <item >What\'s Hot</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->


    <string-array name="items">
        <item>Accueil</item>
        <item>Favoris</item>
        <item>Chercher une ville</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
    </string-array>
    
	<string name="supprimer">Supprimer</string>
	<string name="ajouter">Ajouter</string>
	
	<string name="villes">Villes</string>
	<string name="favoris">Favoris</string>
	<string name="actualiser">Actualiser</string>
    
    <string name="addCity">Ajouter une ville en favori</string>
    <string name="save">Enregistrer</string>
    <string name="find">Chercher</string>
    
    <string name="icon">weathear_icon</string>
    <string name="city">Ville</string>
    <string name="degrees">Degrés en °C</string>
    <string name="humidity">Humidité</string>
    <string name="wind">Vent</string>
    <string name="choose_city">ville : </string>
    
    <string name="date">Mise à jour</string>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    
</resources>
