<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.partiels.meteo.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

    <!-- Actualiser -->
    <item android:id="@+id/action_refresh"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/action_refresh"
          android:showAsAction="ifRoom"/>    
    
    <!-- Liste ville -->
    <item android:id="@+id/action_view_as_list"
          android:icon="@drawable/ic_action_view_as_list"
          android:title="@string/action_view_as_list"
          android:showAsAction="ifRoom"/>
   

</menu>
