
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	   android:orientation="vertical"
	   android:layout_width="match_parent"
	   android:layout_height="match_parent" >
	
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:gravity="center"
	        android:layout_weight="1">
	
			<ImageView
			    android:id="@+id/imageView1"
			    android:contentDescription="@string/icon"
			    android:src="@drawable/ic_launcher"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:scaleType="centerInside"/>
	
	    </LinearLayout>
	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:orientation="vertical"
	        android:layout_height="0dp"
	        android:layout_weight="3">
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:gravity="center">
	
	            <TextView
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/city"
	                android:layout_weight="1"/>
	            <TextView
	                android:id="@+id/textViewCity"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="2"/>
	        </LinearLayout>
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:gravity="center">
	
	            <TextView
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/degrees"
	                android:layout_weight="1"/>
	            <TextView
	                android:id="@+id/textViewDegres"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="2" />
	        </LinearLayout>
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:gravity="center">
	
	            <TextView
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/humidity"
	                android:layout_weight="1"/>
	            <TextView
	                android:id="@+id/textViewHumidite"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="2" />
	        </LinearLayout>
	
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:gravity="center">
	
	            <TextView
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/wind"
	                android:layout_weight="1"/>
	            <TextView
	                android:id="@+id/textViewVent"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="2" />
	        </LinearLayout>

	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:gravity="center">
	
	            <TextView
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:text="@string/date"
	                android:layout_weight="1"/>
	            <TextView
	                
	                android:id="@+id/textViewDate"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="2" />
	        </LinearLayout>

	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:gravity="center">
	            
	            <Button
			        android:id="@+id/buttonFavoris"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:onClick="Favoris"
			        android:text="@string/favoris" />
	            <Button
			        android:id="@+id/buttonVille"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_weight="1"
			        android:onClick="Ville"
			        android:text="@string/villes" />
	
	            <Button
			        android:id="@+id/buttonRaffraichir"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"

			        android:layout_weight="1"
			        android:onClick="RefreshData"
			        android:text="@string/actualiser" />

	        </LinearLayout>	        	        

	
	    </LinearLayout>
	
	</LinearLayout>
